force-app/main/default/objects/Error_Log__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <description>Apex Class where the log originated.</description>
    <label>Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>