force-app/main/default/objects/Error_Log__c/fields/HTTP_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>HTTP_Status_Code__c</fullName>
    <description>The HTTP Status Code received for the log entry.</description>
    <label>HTTP Status Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>