force-app/main/default/objects/Error_Log__c/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <description>The object related the log entry.</description>
    <label>Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>