force-app/main/default/objects/Error_Log__c/fields/Process__c.field-meta.xml
<CustomField>
    <fullName>Process__c</fullName>
    <description>The name of a process, flow, process builder.</description>
    <label>Process</label>
    <length>255</length>
    <type>Text</type>
</CustomField>