force-app/main/default/objects/Error_Log__c/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <description>The record ID of the log entry.</description>
    <label>Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>