force-app/main/default/objects/Error_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Type__c</columns>
    <columns>Class__c</columns>
    <columns>Method__c</columns>
    <columns>Object__c</columns>
    <columns>Line_Number__c</columns>
    <columns>HTTP_Response__c</columns>
    <columns>HTTP_Status_Code__c</columns>
    <columns>Process__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>